--- a/src/main/resources/templates/site/setting.html
+++ b/src/main/resources/templates/site/setting.html
@@ -25,7 +25,7 @@
 					<div class="collapse navbar-collapse" id="navbarSupportedContent">
 						<ul class="navbar-nav mr-auto">
 							<li class="nav-item ml-3 btn-group-vertical">
-								<a class="nav-link" href="../home.html">首页</a>
+								<a class="nav-link" href="../index.html">首页</a>
 							</li>
 							<li class="nav-item ml-3 btn-group-vertical">
 								<a class="nav-link position-relative" href="letter.html">消息<span class="badge badge-danger">12</span></a>
@@ -66,7 +66,7 @@
 				<h6 class="text-left text-info border-bottom pb-2">上传头像</h6>
 				<form class="mt-5">
 					<div class="form-group row mt-4">
-						<label class="col-sm-2 col-form-label text-right">选择头像:</label>
+						<label for="head-image" class="col-sm-2 col-form-label text-right">选择头像:</label>
 						<div class="col-sm-10">
 							<div class="custom-file">
 								<input type="file" class="custom-file-input" id="head-image" lang="es" required="">
