--- a/src/main/resources/templates/site/letter-detail.html
+++ b/src/main/resources/templates/site/letter-detail.html
@@ -13,7 +13,7 @@
 <body>
 <div class="nk-container">
     <!-- 头部 -->
-    <header class="bg-dark sticky-top" th:replace="index::header">
+    <header class="bg-dark sticky-top" th:replace="index::header"></header>
 
     <!-- 内容 -->
     <div class="main">
