--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/css/global.css}"/>
-    <title>牛客网-首页</title>
+    <title>Franky论坛-首页</title>
 </head>
 <body>
 <div class="nk-container">
@@ -176,7 +176,7 @@
     </div>
 
     <!-- 尾部 -->
-    <footer class="bg-dark">
+    <footer class="bg-dark" th:fragment="footer">
         <div class="container">
             <div class="row">
                 <!-- 二维码 -->
