--- a/src/main/resources/templates/site/followee.html
+++ b/src/main/resources/templates/site/followee.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/css/global.css}"/>
-    <title>牛客网-关注</title>
+    <title>Franky论坛-关注</title>
 </head>
 <body>
 <div class="nk-container">
@@ -127,7 +127,7 @@
     </div>
 
     <!-- 尾部 -->
-    <footer class="bg-dark">
+    <footer class="bg-dark" th:replace="index::footer">
         <div class="container">
             <div class="row">
                 <!-- 二维码 -->
