--- a/src/main/resources/templates/site/letter-detail.html
+++ b/src/main/resources/templates/site/letter-detail.html
@@ -8,7 +8,7 @@
           crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/css/global.css}"/>
     <link rel="stylesheet" th:href="@{/css/letter.css}"/>
-    <title>牛客网-私信详情</title>
+    <title>Franky论坛-私信详情</title>
 </head>
 <body>
 <div class="nk-container">
@@ -115,7 +115,7 @@
     </div>
 
     <!-- 尾部 -->
-    <footer class="bg-dark">
+    <footer class="bg-dark" th:replace="index::footer">
         <div class="container">
             <div class="row">
                 <!-- 二维码 -->
