--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -47,10 +47,10 @@
                                 <img th:src="${loginUser.headerUrl}" class="rounded-circle" style="width:30px;"/>
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item text-center"
-                                   th:href="@{|/user/profile/${loginUser.id}|}">个人主页</a>
+                                <a class="dropdown-item text-center" th:href="@{|/user/profile/${loginUser.id}|}">个人主页</a>
                                 <a class="dropdown-item text-center" th:href="@{/user/setting}">账号设置</a>
                                 <a class="dropdown-item text-center" th:href="@{/logout}">退出登录</a>
+                                <a class="dropdown-item text-center" th:href="@{/data}" th:if="${loginUser.type==1}">数据统计</a>
                                 <div class="dropdown-divider"></div>
                                 <span class="dropdown-item text-center text-secondary" th:utext="${loginUser.username}">nowcoder</span>
                             </div>
