--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -73,10 +73,10 @@
                 <!-- 筛选条件 -->
                 <ul class="nav nav-tabs mb-3">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">最新</a>
+                        <a th:class="|nav-link ${ordermod==0?'active':''}|" th:href="@{/index(ordermod=0)}">最新</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">最热</a>
+                        <a th:class="|nav-link ${ordermod==1?'active':''}|" th:href="@{/index(ordermod=1)}">最热</a>
                     </li>
                 </ul>
                 <button type="button" class="btn btn-primary btn-sm position-absolute rt-0" data-toggle="modal"
