--- a/src/main/resources/templates/site/discuss-detail.html
+++ b/src/main/resources/templates/site/discuss-detail.html
@@ -21,13 +21,15 @@
 				<!-- 标题 -->
 				<h6 class="mb-4">
 					<img src="http://static.nowcoder.com/images/img/icons/ico-discuss.png"/>
-					<span th:utext="${post.title}">备战春招，面试刷题跟他复习，一个月全搞定！</span>
+					<span th:utext="${post.title}"></span>
 					<div class="float-right">
 						<input type="hidden" id="postId" th:value="${post.id}">
 						<button type="button" class="btn btn-danger btn-sm" id="topBtn"
-								th:disabled="${post.type==1}" sec:authorize="hasAnyAuthority('moderator')">置顶</button>
+								th:text="${post.type==1?'已置顶':'置顶'}" sec:authorize="hasAnyAuthority('moderator')"
+								th:onclick="|setTop(this,${post.type})|"></button>
 						<button type="button" class="btn btn-danger btn-sm" id="wonderfulBtn"
-								th:disabled="${post.status==1}" sec:authorize="hasAnyAuthority('moderator')">加精</button>
+								th:text="${post.status==1?'已加精':'加精'}" sec:authorize="hasAnyAuthority('moderator')"
+								th:onclick="|setWonderful(this,${post.status})|"></button>
 						<button type="button" class="btn btn-danger btn-sm" id="deleteBtn"
 								th:disabled="${post.status==2}" sec:authorize="hasAnyAuthority('admin')">删除</button>
 					</div>
@@ -40,7 +42,7 @@
 					<div class="media-body">
 						<div class="mt-0 text-warning" th:utext="${user.username}">寒江雪</div>
 						<div class="text-muted mt-3">
-							发布于 <b th:text="${#dates.format(post.createTime,'yyyy-MM-dd HH:mm:ss')}">2019-04-15 15:32:18</b>
+							发布于 <b th:text="${#dates.format(post.createTime,'yyyy-MM-dd HH:mm:ss')}"></b>
 							<ul class="d-inline float-right">
 								<li class="d-inline ml-2">
 									<a href="javascript:;" th:onclick="|like(this,1,${post.id},${post.userId},${post.id});|" class="text-primary">
@@ -54,14 +56,7 @@
 					</div>
 				</div>	
 				<!-- 正文 -->
-				<div class="mt-4 mb-3 content" th:utext="${post.content}">
-					金三银四的金三已经到了，你还沉浸在过年的喜悦中吗？
-					如果是，那我要让你清醒一下了：目前大部分公司已经开启了内推，正式网申也将在3月份陆续开始，金三银四，春招的求职黄金时期已经来啦！！！
-					再不准备，作为19应届生的你可能就找不到工作了。。。作为20届实习生的你可能就找不到实习了。。。
-					现阶段时间紧，任务重，能做到短时间内快速提升的也就只有算法了，
-					那么算法要怎么复习？重点在哪里？常见笔试面试算法题型和解题思路以及最优代码是怎样的？
-					跟左程云老师学算法，不仅能解决以上所有问题，还能在短时间内得到最大程度的提升！！！
-				</div>
+				<div class="mt-4 mb-3 content" th:utext="${post.content}"></div>
 			</div>
 			<!-- 回帖 -->
 			<div class="container mt-3">
@@ -161,19 +156,7 @@
 					</li>
 				</ul>
 				<!-- 分页 -->
-				<nav class="mt-5" th:replace="index::pagination">
-					<ul class="pagination justify-content-center">
-						<li class="page-item"><a class="page-link" href="#">首页</a></li>
-						<li class="page-item disabled"><a class="page-link" href="#">上一页</a></li>
-						<li class="page-item active"><a class="page-link" href="#">1</a></li>
-						<li class="page-item"><a class="page-link" href="#">2</a></li>
-						<li class="page-item"><a class="page-link" href="#">3</a></li>
-						<li class="page-item"><a class="page-link" href="#">4</a></li>
-						<li class="page-item"><a class="page-link" href="#">5</a></li>
-						<li class="page-item"><a class="page-link" href="#">下一页</a></li>
-						<li class="page-item"><a class="page-link" href="#">末页</a></li>
-					</ul>
-				</nav>			
+				<nav class="mt-5" th:replace="index::pagination"></nav>
 			</div>
 			<!-- 回帖输入 -->
 			<div class="container mt-3">
