--- a/src/main/resources/templates/site/letter.html
+++ b/src/main/resources/templates/site/letter.html
@@ -120,9 +120,7 @@
 		</div>
 
 		<!-- 尾部 -->
-		<footer class="bg-dark" th:replace="index::footer">
-
-		</footer>
+		<footer class="bg-dark" th:replace="index::footer"></footer>
 	</div>
 
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
