--- a/src/main/resources/templates/site/my-reply.html
+++ b/src/main/resources/templates/site/my-reply.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -9,7 +9,7 @@
 	<title>Franky论坛-个人主页</title>
 </head>
 <body>
-	<div class="nk-container">
+	<div class="nk-container" >
 		<!-- 头部 -->
 		<header class="bg-dark sticky-top">
 			<div class="container">
@@ -192,27 +192,13 @@
 						</li>																																																
 					</ul>
 					<!-- 分页 -->
-					<nav class="mt-5">
-						<ul class="pagination justify-content-center">
-							<li class="page-item"><a class="page-link" href="#">首页</a></li>
-							<li class="page-item disabled"><a class="page-link" href="#">上一页</a></li>
-							<li class="page-item active"><a class="page-link" href="#">1</a></li>
-							<li class="page-item"><a class="page-link" href="#">2</a></li>
-							<li class="page-item"><a class="page-link" href="#">3</a></li>
-							<li class="page-item"><a class="page-link" href="#">4</a></li>
-							<li class="page-item"><a class="page-link" href="#">5</a></li>
-							<li class="page-item"><a class="page-link" href="#">下一页</a></li>
-							<li class="page-item"><a class="page-link" href="#">末页</a></li>
-						</ul>
-					</nav>					
+					<nav class="mt-5" th:replace="index::pagination"></nav>
 				</div>				
 			</div>
 		</div>
 
 		<!-- 尾部 -->
-		<footer class="bg-dark" th:replace="index::footer">
-
-		</footer>
+		<footer class="bg-dark" th:replace="index::footer"></footer>
 	</div>
 
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
