--- a/src/main/resources/templates/site/followee.html
+++ b/src/main/resources/templates/site/followee.html
@@ -12,57 +12,7 @@
 <body>
 <div class="nk-container">
     <!-- 头部 -->
-    <header class="bg-dark sticky-top" th:replace="index::header">
-        <div class="container">
-            <!-- 导航 -->
-            <nav class="navbar navbar-expand-lg navbar-dark">
-                <!-- logo -->
-                <a class="navbar-brand" href="#"></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse"
-                        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <!-- 功能 -->
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item ml-3 btn-group-vertical">
-                            <a class="nav-link" href="../index.html">首页</a>
-                        </li>
-                        <li class="nav-item ml-3 btn-group-vertical">
-                            <a class="nav-link position-relative" href="letter.html">消息<span
-                                    class="badge badge-danger">12</span></a>
-                        </li>
-                        <li class="nav-item ml-3 btn-group-vertical">
-                            <a class="nav-link" href="register.html">注册</a>
-                        </li>
-                        <li class="nav-item ml-3 btn-group-vertical">
-                            <a class="nav-link" href="login.html">登录</a>
-                        </li>
-                        <li class="nav-item ml-3 btn-group-vertical dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <img src="http://images.nowcoder.com/head/1t.png" class="rounded-circle"
-                                     style="width:30px;"/>
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item text-center" href="profile.html">个人主页</a>
-                                <a class="dropdown-item text-center" href="setting.html">账号设置</a>
-                                <a class="dropdown-item text-center" href="login.html">退出登录</a>
-                                <div class="dropdown-divider"></div>
-                                <span class="dropdown-item text-center text-secondary">nowcoder</span>
-                            </div>
-                        </li>
-                    </ul>
-                    <!-- 搜索 -->
-                    <form class="form-inline my-2 my-lg-0" action="search.html">
-                        <input class="form-control mr-sm-2" type="search" aria-label="Search"/>
-                        <button class="btn btn-outline-light my-2 my-sm-0" type="submit">搜索</button>
-                    </form>
-                </div>
-            </nav>
-        </div>
-    </header>
+    <header class="bg-dark sticky-top" th:replace="index::header"></header>
 
     <!-- 内容 -->
     <div class="main">
@@ -110,19 +60,7 @@
                 </li>
             </ul>
             <!-- 分页 -->
-            <nav class="mt-5" th:replace="index::pagination">
-                <ul class="pagination justify-content-center">
-                    <li class="page-item"><a class="page-link" href="#">首页</a></li>
-                    <li class="page-item disabled"><a class="page-link" href="#">上一页</a></li>
-                    <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                    <li class="page-item"><a class="page-link" href="#">2</a></li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
-                    <li class="page-item"><a class="page-link" href="#">4</a></li>
-                    <li class="page-item"><a class="page-link" href="#">5</a></li>
-                    <li class="page-item"><a class="page-link" href="#">下一页</a></li>
-                    <li class="page-item"><a class="page-link" href="#">末页</a></li>
-                </ul>
-            </nav>
+            <nav class="mt-5" th:replace="index::pagination"></nav>
         </div>
     </div>
 
@@ -131,8 +69,7 @@
 </div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" crossorigin="anonymous"></script>
 <script th:src="@{/js/global.js}"></script>
 <script th:src="@{/js/profile.js}"></script>
