--- a/src/main/resources/templates/site/my-reply.html
+++ b/src/main/resources/templates/site/my-reply.html
@@ -11,52 +11,7 @@
 <body>
 	<div class="nk-container" >
 		<!-- 头部 -->
-		<header class="bg-dark sticky-top">
-			<div class="container">
-				<!-- 导航 -->
-				<nav class="navbar navbar-expand-lg navbar-dark">
-					<!-- logo -->
-					<a class="navbar-brand" href="#"></a>
-					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-						<span class="navbar-toggler-icon"></span>
-					</button>
-					<!-- 功能 -->
-					<div class="collapse navbar-collapse" id="navbarSupportedContent">
-						<ul class="navbar-nav mr-auto">
-							<li class="nav-item ml-3 btn-group-vertical">
-								<a class="nav-link" href="../index.html">首页</a>
-							</li>
-							<li class="nav-item ml-3 btn-group-vertical">
-								<a class="nav-link position-relative" href="letter.html">消息<span class="badge badge-danger">12</span></a>
-							</li>
-							<li class="nav-item ml-3 btn-group-vertical">
-								<a class="nav-link" href="register.html">注册</a>
-							</li>
-							<li class="nav-item ml-3 btn-group-vertical">
-								<a class="nav-link" href="login.html">登录</a>
-							</li>
-							<li class="nav-item ml-3 btn-group-vertical dropdown">
-								<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-									<img src="http://images.nowcoder.com/head/1t.png" class="rounded-circle" style="width:30px;"/>
-								</a>
-								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-									<a class="dropdown-item text-center" href="profile.html">个人主页</a>
-									<a class="dropdown-item text-center" href="setting.html">账号设置</a>
-									<a class="dropdown-item text-center" href="login.html">退出登录</a>
-									<div class="dropdown-divider"></div>
-									<span class="dropdown-item text-center text-secondary">nowcoder</span>
-								</div>
-							</li>
-						</ul>
-						<!-- 搜索 -->
-						<form class="form-inline my-2 my-lg-0" action="search.html">
-							<input class="form-control mr-sm-2" type="search" aria-label="Search" />
-							<button class="btn btn-outline-light my-2 my-sm-0" type="submit">搜索</button>
-						</form>
-					</div>
-				</nav>
-			</div>
-		</header>
+		<header class="bg-dark sticky-top" th:replace="index::header"></header>
 
 		<!-- 内容 -->
 		<div class="main">
@@ -65,134 +20,33 @@
 				<div class="position-relative">
 					<ul class="nav nav-tabs">
 						<li class="nav-item">
-							<a class="nav-link" href="profile.html">个人信息</a>
+							<a class="nav-link" th:href="@{|/user/profile/${user.id}|}">个人信息</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="my-post.html">我的帖子</a>
+							<a class="nav-link" th:href="@{|/user/my-post/${user.id}|}">我发布的讨论</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link active" href="my-reply.html">我的回复</a>
+							<a class="nav-link active" th:href="@{|/user/my-reply/${user.id}|}">我的回复</a>
 						</li>
 					</ul>
-					<a href="profile.html" class="text-muted position-absolute rt-0">返回个人主页&gt;</a>
 				</div>
 				<!-- 我的回复 -->
 				<div class="mt-4">
-					<h6><b class="square"></b> 回复的帖子(379)</h6>
-					<ul class="list-unstyled mt-4 pl-3 pr-3">
-						<li class="border-bottom pb-3 mt-4">
+					<h6><b class="square"></b>回复的讨论(<i th:text="${mycomments.size()}"></i>)</h6>
+					<ul class="list-unstyled mt-4 pl-3 pr-3" th:if="${mycomments!=null && !mycomments.isEmpty()}">
+						<li class="border-bottom pb-3 mt-4" th:each="comment:${mycomments}">
 							<div class="font-size-16 text-info">
-								<a href="#" class="text-info">备战春招，面试刷题跟他复习，一个月全搞定！</a>
+								<a th:href="@{|/discuss/detail/${comment.entityId}|}"
+								   th:text="原帖链接"
+								   class="text-info"></a>
 							</div>
-							<div class="mt-1 font-size-14">
-								顶顶顶!								
-							</div>
+							<div class="mt-1 font-size-14" th:utext="${comment.getContent()}"></div>
 							<div class="text-right font-size-12 text-muted">
-								回复于 <b>2019-04-15 10:10:10</b>
+								回复于  <b th:text="${#dates.format(comment.getCreateTime(),'yyyy-MM-dd HH:mm:ss')}"></b>
 							</div>
 						</li>
-						<li class="border-bottom pb-3 mt-4">
-							<div class="font-size-16 text-info">
-								<a href="#" class="text-info">备战春招，面试刷题跟他复习，一个月全搞定！</a>
-							</div>
-							<div class="mt-1 font-size-14">
-								顶顶顶!								
-							</div>
-							<div class="text-right font-size-12 text-muted">
-								回复于 <b>2019-04-15 10:10:10</b>
-							</div>
-						</li>
-						<li class="border-bottom pb-3 mt-4">
-							<div class="font-size-16 text-info">
-								<a href="#" class="text-info">备战春招，面试刷题跟他复习，一个月全搞定！</a>
-							</div>
-							<div class="mt-1 font-size-14">
-								顶顶顶!								
-							</div>
-							<div class="text-right font-size-12 text-muted">
-								回复于 <b>2019-04-15 10:10:10</b>
-							</div>
-						</li>
-						<li class="border-bottom pb-3 mt-4">
-							<div class="font-size-16 text-info">
-								<a href="#" class="text-info">备战春招，面试刷题跟他复习，一个月全搞定！</a>
-							</div>
-							<div class="mt-1 font-size-14">
-								顶顶顶!								
-							</div>
-							<div class="text-right font-size-12 text-muted">
-								回复于 <b>2019-04-15 10:10:10</b>
-							</div>
-						</li>
-						<li class="border-bottom pb-3 mt-4">
-							<div class="font-size-16 text-info">
-								<a href="#" class="text-info">备战春招，面试刷题跟他复习，一个月全搞定！</a>
-							</div>
-							<div class="mt-1 font-size-14">
-								顶顶顶!								
-							</div>
-							<div class="text-right font-size-12 text-muted">
-								回复于 <b>2019-04-15 10:10:10</b>
-							</div>
-						</li>
-						<li class="border-bottom pb-3 mt-4">
-							<div class="font-size-16 text-info">
-								<a href="#" class="text-info">备战春招，面试刷题跟他复习，一个月全搞定！</a>
-							</div>
-							<div class="mt-1 font-size-14">
-								顶顶顶!								
-							</div>
-							<div class="text-right font-size-12 text-muted">
-								回复于 <b>2019-04-15 10:10:10</b>
-							</div>
-						</li>
-						<li class="border-bottom pb-3 mt-4">
-							<div class="font-size-16 text-info">
-								<a href="#" class="text-info">备战春招，面试刷题跟他复习，一个月全搞定！</a>
-							</div>
-							<div class="mt-1 font-size-14">
-								顶顶顶!								
-							</div>
-							<div class="text-right font-size-12 text-muted">
-								回复于 <b>2019-04-15 10:10:10</b>
-							</div>
-						</li>
-						<li class="border-bottom pb-3 mt-4">
-							<div class="font-size-16 text-info">
-								<a href="#" class="text-info">备战春招，面试刷题跟他复习，一个月全搞定！</a>
-							</div>
-							<div class="mt-1 font-size-14">
-								顶顶顶!								
-							</div>
-							<div class="text-right font-size-12 text-muted">
-								回复于 <b>2019-04-15 10:10:10</b>
-							</div>
-						</li>
-						<li class="border-bottom pb-3 mt-4">
-							<div class="font-size-16 text-info">
-								<a href="#" class="text-info">备战春招，面试刷题跟他复习，一个月全搞定！</a>
-							</div>
-							<div class="mt-1 font-size-14">
-								顶顶顶!								
-							</div>
-							<div class="text-right font-size-12 text-muted">
-								回复于 <b>2019-04-15 10:10:10</b>
-							</div>
-						</li>
-						<li class="border-bottom pb-3 mt-4">
-							<div class="font-size-16 text-info">
-								<a href="#" class="text-info">备战春招，面试刷题跟他复习，一个月全搞定！</a>
-							</div>
-							<div class="mt-1 font-size-14">
-								顶顶顶!								
-							</div>
-							<div class="text-right font-size-12 text-muted">
-								回复于 <b>2019-04-15 10:10:10</b>
-							</div>
-						</li>																																																
 					</ul>
-					<!-- 分页 -->
-					<nav class="mt-5" th:replace="index::pagination"></nav>
+
 				</div>				
 			</div>
 		</div>
