--- a/src/main/resources/templates/site/admin/data.html
+++ b/src/main/resources/templates/site/admin/data.html
@@ -18,34 +18,44 @@
 			<!-- 网站UV -->
 			<div class="container pl-5 pr-5 pt-3 pb-3 mt-3">
 				<h6 class="mt-3"><b class="square"></b> 独立访问量 </h6>
-				<form class="form-inline mt-3" method="post" th:action="@{/data/uv}">
-					<label>
-						<input type="date" class="form-control" required name="start" th:value="${#dates.format(uvStartDate,'yyyy-MM-dd')}"/>
-					</label>
-					<label>
-						<input type="date" class="form-control ml-3" required name="end" th:value="${#dates.format(uvEndDate,'yyyy-MM-dd')}"/>
-					</label>
-					<button type="submit" class="btn btn-primary ml-3">开始统计</button>
-				</form>
+				<label for="uvstart">
+					<input type="date" class="form-control" required name="uvstart"
+						   id="uvstart"
+						   th:value="${#dates.format(uvStartDate,'yyyy-MM-dd')}"/>
+				</label>
+				<label for="uvend">
+					<input type="date" class="form-control ml-3" required name="uvend"
+						   id="uvend"
+						   th:value="${#dates.format(uvEndDate,'yyyy-MM-dd')}"/>
+				</label>
+				<button class="btn btn-primary ml-3" th:onclick="|calUV()|">开始统计</button>
 				<ul class="list-group mt-3 mb-3">
 					<li class="list-group-item d-flex justify-content-between align-items-center">
 						统计结果
-						<span class="badge badge-primary badge-danger font-size-14" th:text="${uvResult}">0</span>
+						<span id="uvres" class="badge badge-primary badge-danger font-size-14"
+							  th:text="${uvResult}">0</span>
 					</li>
 				</ul>
 			</div>
 			<!-- 活跃用户 -->
 			<div class="container pl-5 pr-5 pt-3 pb-3 mt-4">
 				<h6 class="mt-3"><b class="square"></b> 活跃用户</h6>
-				<form class="form-inline mt-3" method="post" th:action="@{/data/dau}">
-					<input type="date" class="form-control" required name="start" th:value="${#dates.format(dauStartDate,'yyyy-MM-dd')}"/>
-					<input type="date" class="form-control ml-3" required name="end" th:value="${#dates.format(dauEndDate,'yyyy-MM-dd')}"/>
-					<button type="submit" class="btn btn-primary ml-3">开始统计</button>
-				</form>
+				<label for="daustart">
+					<input type="date" class="form-control" required name="daustart"
+						   id="daustart"
+						   th:value="${#dates.format(dauStartDate,'yyyy-MM-dd')}"/>
+				</label>
+				<label for="dauend">
+					<input type="date" class="form-control ml-3" required name="dauend"
+						   id="dauend"
+						   th:value="${#dates.format(dauEndDate,'yyyy-MM-dd')}"/>
+				</label>
+				<button class="btn btn-primary ml-3" th:onclick="|calDAU()|">开始统计</button>
 				<ul class="list-group mt-3 mb-3">
 					<li class="list-group-item d-flex justify-content-between align-items-center">
 						统计结果
-						<span class="badge badge-primary badge-danger font-size-14" th:text="${dauResult}">0</span>
+						<span id="daures" class="badge badge-primary badge-danger font-size-14"
+							  th:text="${dauResult}">0</span>
 					</li>
 				</ul>
 			</div>				
