--- a/src/main/resources/templates/site/my-post.html
+++ b/src/main/resources/templates/site/my-post.html
@@ -23,10 +23,10 @@
 							<a class="nav-link" th:href="@{|/user/profile/${user.id}|}">个人信息</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link active" th:href="@{|/user/my-post/${user.id}|}">我发布的讨论</a>
+							<a class="nav-link active" th:href="@{|/user/my-post/${user.id}|}">发布的讨论</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" th:href="@{|/user/my-reply/${user.id}|}">我的回复</a>
+							<a class="nav-link" th:href="@{|/user/my-reply/${user.id}|}">回复</a>
 						</li>
 					</ul>
 				</div>
