--- a/src/main/resources/templates/mail/activation.html
+++ b/src/main/resources/templates/mail/activation.html
@@ -2,13 +2,12 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <link rel="icon" href="https://static.nowcoder.com/images/logo_87_87.png"/>
     <title>Franky论坛-激活账号</title>
 </head>
 <body>
 	<div>
 		<p>
-			<b th:text="${email}">xxx@xxx.com</b>, 您好!
+			<b th:text="${email}"></b>, 您好!
 		</p>
 		<p>
 			您正在注册Franky论坛, 这是一封激活邮件, 请点击
